# asciinema-scripted

./: .gitignore  LICENSE  README.md  demo_script.cast  demo_script.yaml  noxfile.py  pyproject.toml
src/asciinema_scripted/: __init__.py  __main__.py  cast.py  script.py  util.py
tests/: test_run_demo.py  test_script_parsing.py
